Making 'programme' consistent

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /keynotes
 
   - title: "Programme"
-    url: /program
+    url: /programme
  
   - title: "Papers"
     url: /papers
